crates/kyzo-core/tests/compile_fail/storage_key_rejects_tuple_key.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/storage_key_rejects_tuple_key.rs:17:19
   |
17 |     needs_storage(bare);
   |     ------------- ^^^^ expected `StorageKey`, found `TupleKey`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/compile_fail/storage_key_rejects_tuple_key.rs:13:4
   |
13 | fn needs_storage(_k: StorageKey) {}
   |    ^^^^^^^^^^^^^ --------------
